updated to handle multiple api's, and added unit tests

--- a/src/inventory/templates/inventory/index.html
+++ b/src/inventory/templates/inventory/index.html
@@ -8,14 +8,14 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<script type="text/javascript" src="/static/js/mainMenu"></script>
-<script type="text/javascript" src="/static/js/vars"></script>
+<script type="text/javascript" src="/static/inventory/js/mainMenu.js"></script>
+<script type="text/javascript" src="/static/inventory/js/vars.js"></script>
 <script rel="javascript" type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
 
 <body>
 
-  <p>Hello world! This is HTML5s Boilerplate.</p>
+  <p>Hello world!</p>
   <div>
     <ul id="mainMenu">
     </ul>
